# logging_poc

./: .gitignore  README.md  docker-compose.yaml  keep_alive.sh  prometheus.yaml  promtail.yaml
grafana_tf/: main.tf  poc_dashboard.json
promtail/: docker-config.yaml
sample_tool/: pyproject.toml
sample_tool/sample_tool/: __init__.py  impl.py
sample_tool/tests/: test_sample_tool.py
