[tool.poetry]
name = "sample_tool"
version = "0.1.0"
description = ""
authors = ["Ian Baldwin <ian@iantbaldw.in>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
mypy = "^0.790"
logzero = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
bandit = "^1.6.2"
mypy = "^0.790"
black = "^20.8b1"

[tool.poetry.scripts]
st = 'sample_tool:cli'

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
